# goblin

./: .build.yml  LICENSE  README.md  goblin.c  meson.build  png2tga.c  test_goblin.sh
.github/workflows/: default.yml  test.yml
include/: goblin.h
perl/lib/: Goblin.pm
test/: square.py
